Reformat the project.